--- a/index.html
+++ b/index.html
@@ -11,12 +11,33 @@
 
 </head>
 <body>
-  About
-  Discover
-  Get Started
-
-  Mastercraft Bamboo Monitor Riser
-  A beautiful & handcrafted monitor stand to reduce neck and eye strain.
+  <header class="main-header">
+    <nav class="main-nav">
+      <a href="#" class="main-nav-company-logo">
+        <img src="images/logo.svg" alt="">
+      </a>
+      <button class="main-nav-button">
+        <div class="main-nav-icon"></div>
+        <div class="main-nav-icon"></div>
+        <div class="main-nav-icon"></div>
+      </button>
+      <ul class="main-nav-links">
+        <li><a href="">About</a></li>
+        <li><a href="">Discover</a></li>
+        <li><a href="">Get Started</a></li>
+      </ul>
+    </nav>
+  </header>
+  <section class="introduction-section">
+    <div class="introduction-section-product-logo"><img src="images/logo-mastercraft.svg" alt=""></div>
+    <h2 class="introduction-section-product-name">Mastercraft Bamboo Monitor Riser</h2>
+    <p class="introduction-section-product-description">A beautiful & handcrafted monitor stand to reduce neck and eye strain.</p>
+    <div class="introduction-section-buttons"><button class="back-this-project">Back this project</button><button class="bookmark-this-mobile"><img src="images/icon-bookmark.svg" alt=""></button>
+    <div class="bookmark-this-desktop"><button><img src="images/icon-bookmark.svg" alt=""></button><span class="bookmarked">Bookmarked</span><span class="bookmark">Bookmark</span></div>
+    </div>
+  </section>
+  
+  
 
   Back this project
   Bookmark
