initial responsive design

--- a/index.html
+++ b/index.html
@@ -28,6 +28,13 @@
       </ul>
     </nav>
   </header>
+  <div class="background-container">
+    <!-- <img srcset="images/image-hero-mobile.jpg 600w,
+    images/image-hero-desktop.jpg 1440w"
+    sizes="(max-width: 600px) 600px, 1440px"
+    src="images/image-hero-mobile.jpg"
+    alt="" > -->
+  </div>
   <section class="introduction-section">
     <div class="introduction-section-product-logo"><img src="images/logo-mastercraft.svg" alt=""></div>
     <h2 class="introduction-section-product-name">Mastercraft Bamboo Monitor Riser</h2>
