--- a/index.html
+++ b/index.html
@@ -1,142 +1,168 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link rel="stylesheet" href="style.css">
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
+    <link rel="stylesheet" href="style.css" />
 
-  <title>Frontend Mentor | Crowdfunding product page</title>
+    <title>Frontend Mentor | Crowdfunding product page</title>
+  </head>
+  <body>
+    <header class="main-header">
+      <nav class="main-nav">
+        <a href="#" class="main-nav-company-logo">
+          <img src="images/logo.svg" alt="" />
+        </a>
+        <button class="main-nav-button">
+          <div class="main-nav-icon"></div>
+          <div class="main-nav-icon"></div>
+          <div class="main-nav-icon"></div>
+        </button>
+        <ul class="main-nav-links">
+          <li><a href="">About</a></li>
+          <li><a href="">Discover</a></li>
+          <li><a href="">Get Started</a></li>
+        </ul>
+      </nav>
+    </header>
+    <div class="background-container"></div>
+    <section class="introduction-section">
+      <div class="introduction-section-product-logo">
+        <img src="images/logo-mastercraft.svg" alt="" />
+      </div>
+      <h2 class="introduction-section-product-name">
+        Mastercraft Bamboo Monitor Riser
+      </h2>
+      <p class="introduction-section-product-description">
+        A beautiful & handcrafted monitor stand to reduce neck and eye strain.
+      </p>
+      <div class="introduction-section-buttons">
+        <button class="back-this-project">Back this project</button
+        ><button class="bookmark-this mobile">
+          <img src="images/icon-bookmark.svg" alt="" />
+        </button>
+        <div class="bookmark-this desktop">
+          <button><img src="images/icon-bookmark.svg" alt="" /></button
+          ><span class="bookmarked">Bookmarked</span
+          ><span class="bookmark">Bookmark</span>
+        </div>
+      </div>
+    </section>
 
-</head>
-<body>
-  <header class="main-header">
-    <nav class="main-nav">
-      <a href="#" class="main-nav-company-logo">
-        <img src="images/logo.svg" alt="">
-      </a>
-      <button class="main-nav-button">
-        <div class="main-nav-icon"></div>
-        <div class="main-nav-icon"></div>
-        <div class="main-nav-icon"></div>
-      </button>
-      <ul class="main-nav-links">
-        <li><a href="">About</a></li>
-        <li><a href="">Discover</a></li>
-        <li><a href="">Get Started</a></li>
-      </ul>
-    </nav>
-  </header>
-  <div class="background-container">
-    <!-- <img srcset="images/image-hero-mobile.jpg 600w,
-    images/image-hero-desktop.jpg 1440w"
-    sizes="(max-width: 600px) 600px, 1440px"
-    src="images/image-hero-mobile.jpg"
-    alt="" > -->
-  </div>
-  <section class="introduction-section">
-    <div class="introduction-section-product-logo"><img src="images/logo-mastercraft.svg" alt=""></div>
-    <h2 class="introduction-section-product-name">Mastercraft Bamboo Monitor Riser</h2>
-    <p class="introduction-section-product-description">A beautiful & handcrafted monitor stand to reduce neck and eye strain.</p>
-    <div class="introduction-section-buttons"><button class="back-this-project">Back this project</button><button class="bookmark-this-mobile"><img src="images/icon-bookmark.svg" alt=""></button>
-    <div class="bookmark-this-desktop"><button><img src="images/icon-bookmark.svg" alt=""></button><span class="bookmarked">Bookmarked</span><span class="bookmark">Bookmark</span></div>
+    <section class="stats-section">
+      <div class="stat">
+        <h2>$89,914</h2>
+        <p>of $100,000 backed</p>
+      </div>
+      <div class="stat">
+        <h2>5,007</h2>
+        <p>total backers</p>
+      </div>
+      <div class="stat">
+        <h2>56</h2>
+        <p>days left</p>
+      </div>
+      <div class="progress">
+        <progress-bar></progress-bar>
+      </div>
+    </section>
+
+    <section class="about-section">
+      <h2 class="about-section-header">About this project</h2>
+      <p class="about-section-description">
+        The Mastercraft Bamboo Monitor Riser is a sturdy and stylish platform
+        that elevates your screen to a more comfortable viewing height. Placing
+        your monitor at eye level has the potential to improve your posture and
+        make you more comfortable while at work, helping you stay focused on the
+        task at hand.
+      </p>
+      <p class="about-section-description">
+        Featuring artisan craftsmanship, the simplicity of design creates extra
+        desk space below your computer to allow notepads, pens, and USB sticks
+        to be stored under the stand.
+      </p>
+      <section class="about-section-card">
+        <h3 class="about-section-card-header">Bamboo Stand</h3>
+        <h3 class="about-section-card-subheader">Pledge $25 or more</h3>
+        <p class="about-section-card-description">
+          You get an ergonomic stand made of natural bamboo. You've helped us
+          launch our promotional campaign, and you’ll be added to a special
+          Backer member list.
+        </p>
+        <p class="about-section-card-amount">101<span> left</span></p>
+        <button class="about-section-card-button">Select Reward</button>
+      </section>
+      <section class="about-section-card">
+        <h3 class="about-section-card-header">Black Edition Stand</h3>
+        <h3 class="about-section-card-subheader">Pledge $75 or more</h3>
+        <p class="about-section-card-description">
+          You get a Black Special Edition computer stand and a personal thank
+          you. You’ll be added to our Backer member list. Shipping is included.
+        </p>
+        <p class="about-section-card-amount">64<span> left</span></p>
+        <button class="about-section-card-button">Select Reward</button>
+      </section>
+      <section class="about-section-card">
+        <h3 class="about-section-card-header">Mahogany Special Edition</h3>
+        <h3 class="about-section-card-subheader">Pledge $200 or more</h3>
+        <p class="about-section-card-description">
+          You get two Special Edition Mahogany stands, a Backer T-Shirt, and a
+          personal thank you. You’ll be added to our Backer member list.
+          Shipping is included.
+        </p>
+        <p class="about-section-card-amount">0<span> left</span></p>
+        <button class="about-section-card-button disabled">Out of Stock</button>
+      </section>
+    </section>
+
+    <div class="modals">
+      <!-- Selection modal start -->
+
+      Back this project Want to support us in bringing Mastercraft Bamboo
+      Monitor Riser out in the world? Pledge with no reward Choose to support us
+      without a reward if you simply believe in our project. As a backer, you
+      will be signed up to receive product updates via email. Bamboo Stand
+      Pledge $25 or more You get an ergonomic stand made of natural bamboo.
+      You've helped us launch our promotional campaign, and you’ll be added to a
+      special Backer member list. 101 left
+
+      <!-- Selected pledge start -->
+      Enter your pledge $25 Continue
+      <!-- Selected pledge end -->
+
+      Black Edition Stand Pledge $75 or more You get a Black Special Edition
+      computer stand and a personal thank you. You’ll be added to our Backer
+      member list. Shipping is included. 64 left
+
+      <!-- Selected pledge start -->
+      Enter your pledge $75 Continue
+      <!-- Selected pledge end -->
+
+      Mahogany Special Edition Pledge $200 or more You get two Special Edition
+      Mahogany stands, a Backer T-Shirt, and a personal thank you. You’ll be
+      added to our Backer member list. Shipping is included. 0 left
+
+      <!-- Selected pledge  start -->
+      Enter your pledge $200 Continue
+      <!-- Selected pledge end -->
+
+      <!-- Selection modal end -->
+
+      <!-- Success modal start -->
+
+      Thanks for your support! Your pledge brings us one step closer to sharing
+      Mastercraft Bamboo Monitor Riser worldwide. You will get an email once our
+      campaign is completed. Got it!
+
+      <!-- Success modal end -->
     </div>
-  </section>
-  
-  
-
-  Back this project
-  Bookmark
-
-  $89,914 of $100,000 backed
-  5,007 total backers
-  56 days left
-
-  About this project
-
-  The Mastercraft Bamboo Monitor Riser is a sturdy and stylish platform that elevates your screen 
-  to a more comfortable viewing height. Placing your monitor at eye level has the potential to improve 
-  your posture and make you more comfortable while at work, helping you stay focused on the task at hand.
-
-  Featuring artisan craftsmanship, the simplicity of design creates extra desk space below your computer 
-  to allow notepads, pens, and USB sticks to be stored under the stand.
-  
-  Bamboo Stand
-  Pledge $25 or more
-  You get an ergonomic stand made of natural bamboo. You've helped us launch our promotional campaign, and 
-  you’ll be added to a special Backer member list.
-  101 left
-  Select Reward
-
-  Black Edition Stand
-  Pledge $75 or more
-  You get a Black Special Edition computer stand and a personal thank you. You’ll be added to our Backer 
-  member list. Shipping is included.
-  64 left
-  Select Reward
-
-  Mahogany Special Edition
-  Pledge $200 or more
-  You get two Special Edition Mahogany stands, a Backer T-Shirt, and a personal thank you. You’ll be added 
-  to our Backer member list. Shipping is included.
-  0 left
-  Out of Stock
-
-  <!-- Selection modal start -->
-
-  Back this project
-  Want to support us in bringing Mastercraft Bamboo Monitor Riser out in the world?
-
-  Pledge with no reward
-  Choose to support us without a reward if you simply believe in our project. As a backer, 
-  you will be signed up to receive product updates via email.
-
-  Bamboo Stand
-  Pledge $25 or more
-  You get an ergonomic stand made of natural bamboo. You've helped us launch our promotional campaign, and
-  you’ll be added to a special Backer member list.
-  101 left
-
-  <!-- Selected pledge start -->
-  Enter your pledge
-  $25
-  Continue
-  <!-- Selected pledge end -->
-
-  Black Edition Stand
-  Pledge $75 or more
-  You get a Black Special Edition computer stand and a personal thank you. You’ll be added to our Backer
-  member list. Shipping is included.
-  64 left
-
-  <!-- Selected pledge start -->
-  Enter your pledge
-  $75
-  Continue
-  <!-- Selected pledge end -->
-
-  Mahogany Special Edition
-  Pledge $200 or more
-  You get two Special Edition Mahogany stands, a Backer T-Shirt, and a personal thank you. You’ll be added
-  to our Backer member list. Shipping is included.
-  0 left
-
-  <!-- Selected pledge  start -->
-  Enter your pledge
-  $200
-  Continue
-  <!-- Selected pledge end -->
-
-  <!-- Selection modal end -->
-
-  <!-- Success modal start -->
-
-  Thanks for your support!
-  Your pledge brings us one step closer to sharing Mastercraft Bamboo Monitor Riser worldwide. You will get
-  an email once our campaign is completed.
-  Got it!
-
-  <!-- Success modal end -->
-</body>
+  </body>
 </html>
