about section card style

--- a/index.html
+++ b/index.html
@@ -90,35 +90,49 @@
         to be stored under the stand.
       </p>
       <section class="about-section-card">
-        <h3 class="about-section-card-header">Bamboo Stand</h3>
-        <h3 class="about-section-card-subheader">Pledge $25 or more</h3>
+        <header class="about-section-card-headers">
+          <h3 class="about-section-card-header">Bamboo Stand</h3>
+          <h3 class="about-section-card-header subheader">
+            Pledge $25 or more
+          </h3>
+        </header>
+
         <p class="about-section-card-description">
           You get an ergonomic stand made of natural bamboo. You've helped us
           launch our promotional campaign, and you’ll be added to a special
           Backer member list.
         </p>
-        <p class="about-section-card-amount">101<span> left</span></p>
+        <p class="about-section-card-amount"><span>101</span> left</p>
         <button class="about-section-card-button">Select Reward</button>
       </section>
       <section class="about-section-card">
-        <h3 class="about-section-card-header">Black Edition Stand</h3>
-        <h3 class="about-section-card-subheader">Pledge $75 or more</h3>
+        <header class="about-section-card-headers">
+          <h3 class="about-section-card-header">Black Edition Stand</h3>
+          <h3 class="about-section-card-header subheader">
+            Pledge $75 or more
+          </h3>
+        </header>
         <p class="about-section-card-description">
           You get a Black Special Edition computer stand and a personal thank
           you. You’ll be added to our Backer member list. Shipping is included.
         </p>
-        <p class="about-section-card-amount">64<span> left</span></p>
+        <p class="about-section-card-amount"><span>64</span> left</p>
         <button class="about-section-card-button">Select Reward</button>
       </section>
       <section class="about-section-card">
-        <h3 class="about-section-card-header">Mahogany Special Edition</h3>
-        <h3 class="about-section-card-subheader">Pledge $200 or more</h3>
+        <header class="about-section-card-headers">
+          <h3 class="about-section-card-header">Mahogany Special Edition</h3>
+          <h3 class="about-section-card-header subheader">
+            Pledge $200 or more
+          </h3>
+        </header>
+
         <p class="about-section-card-description">
           You get two Special Edition Mahogany stands, a Backer T-Shirt, and a
           personal thank you. You’ll be added to our Backer member list.
           Shipping is included.
         </p>
-        <p class="about-section-card-amount">0<span> left</span></p>
+        <p class="about-section-card-amount"><span>0</span> left</p>
         <button class="about-section-card-button disabled">Out of Stock</button>
       </section>
     </section>
