--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         <p class="about-section-card-amount"><span>64</span> left</p>
         <button class="about-section-card-button">Select Reward</button>
       </section>
-      <section class="about-section-card">
+      <section class="about-section-card disabled-section">
         <header class="about-section-card-headers">
           <h3 class="about-section-card-header">Mahogany Special Edition</h3>
           <h3 class="about-section-card-header subheader">
@@ -133,7 +133,7 @@
           Shipping is included.
         </p>
         <p class="about-section-card-amount"><span>0</span> left</p>
-        <button class="about-section-card-button disabled">Out of Stock</button>
+        <button class="about-section-card-button disabled-button">Out of Stock</button>
       </section>
     </section>
 
