main content style

--- a/index.html
+++ b/index.html
@@ -58,20 +58,20 @@
     </section>
 
     <section class="stats-section">
-      <div class="stat">
+      <div class="stat total-backed">
         <h2>$89,914</h2>
         <p>of $100,000 backed</p>
       </div>
-      <div class="stat">
+      <div class="stat total-backers">
         <h2>5,007</h2>
         <p>total backers</p>
       </div>
-      <div class="stat">
+      <div class="stat days-left">
         <h2>56</h2>
         <p>days left</p>
       </div>
       <div class="progress">
-        <progress-bar></progress-bar>
+        <div class="progress-bar"></div>
       </div>
     </section>
 
