success modal content and style

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
       </section>
     </section>
 
-    <div class="modal showing-modal">
+    <div class="modal project">
       <div class="modal-content">
         <header class="modal-content-header">
           <h2>Back this project</h2>
@@ -271,34 +271,23 @@
             </div>
           </div>
         </section>
+      </div>
+    </div>
 
-        <!-- Selection modal start -->
-
-        101 left
-
-        <!-- Selected pledge start -->
-        Enter your pledge $25 Continue
-        <!-- Selected pledge end -->
-
-        64 left
-
-        <!-- Selected pledge start -->
-        Enter your pledge $75 Continue
-        <!-- Selected pledge end -->
-
-        <!-- Selected pledge  start -->
-        Enter your pledge $200 Continue
-        <!-- Selected pledge end -->
-
-        <!-- Selection modal end -->
-
-        <!-- Success modal start -->
-
-        Thanks for your support! Your pledge brings us one step closer to
+    <div class="modal success showing-modal">
+      <div class="modal-content">
+        <img class="success-svg"src="images/icon-check.svg" alt="">
+        <header class="modal-content-header">
+          <h2>Thanks for your support!</h2>
+        </header>
+        <p class="modal-content-description">
+          Your pledge brings us one step closer to
         sharing Mastercraft Bamboo Monitor Riser worldwide. You will get an
-        email once our campaign is completed. Got it!
-
-        <!-- Success modal end -->
+        email once our campaign is completed.
+        </p>
+        <button class="">
+          Got it!
+        </button>
       </div>
     </div>
   </body>
