showing-modal script added

--- a/index.html
+++ b/index.html
@@ -22,9 +22,7 @@
           <img src="images/logo.svg" alt="" />
         </a>
         <button class="main-nav-button">
-          <div class="main-nav-icon"></div>
-          <div class="main-nav-icon"></div>
-          <div class="main-nav-icon"></div>
+          <img src="images/icon-hamburger.svg" alt="">
         </button>
         <ul class="main-nav-links">
           <li><a href="">About</a></li>
@@ -274,7 +272,7 @@
       </div>
     </div>
 
-    <div class="modal success showing-modal">
+    <div class="modal success">
       <div class="modal-content">
         <img class="success-svg"src="images/icon-check.svg" alt="">
         <header class="modal-content-header">
@@ -285,10 +283,12 @@
         sharing Mastercraft Bamboo Monitor Riser worldwide. You will get an
         email once our campaign is completed.
         </p>
-        <button class="">
+        <button class="success-button">
           Got it!
         </button>
       </div>
     </div>
+
+    <script src="modal.js"></script>
   </body>
 </html>
