modal card styling script

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
         <section class="modal-content-card-container">
           <div class="modal-content-card">
             <header class="modal-content-card-headers">
-              <input type="radio" class="modal-content-card-select" />
+              <input type="radio" class="modal-content-card-select" name="select-pledge"/>
               <hgroup>
                 <h3>Pledge with no reward</h3>
               </hgroup>
@@ -177,10 +177,10 @@
             </div>
           </div>
         </section>
-        <section class="modal-content-card-container selected-card">
+        <section class="modal-content-card-container">
           <div class="modal-content-card">
             <header class="modal-content-card-headers">
-              <input type="radio" class="modal-content-card-select" />
+              <input type="radio" class="modal-content-card-select" name="select-pledge"/>
               <hgroup>
                 <h3>Bamboo Stand</h3>
                 <h3 class="subheader">Pledge $25 or more</h3>
@@ -193,7 +193,7 @@
             </p>
             <p class="modal-content-card-count"><span>101</span> left</p>
           </div>
-          <div class="modal-content-pledge-container showing">
+          <div class="modal-content-pledge-container">
             <div class="modal-content-pledge">
               <p class="modal-content-pledge-header">Enter your pledge</p>
               <div class="pledge-form-container">
@@ -211,7 +211,7 @@
         <section class="modal-content-card-container">
           <div class="modal-content-card">
             <header class="modal-content-card-headers">
-              <input type="radio" class="modal-content-card-select" />
+              <input type="radio" class="modal-content-card-select" name="select-pledge"/>
               <hgroup>
                 <h3>Black Edition Stand</h3>
                 <h3 class="subheader">Pledge $75 or more</h3>
@@ -242,7 +242,7 @@
         <section class="modal-content-card-container disabled-section">
           <div class="modal-content-card">
             <header class="modal-content-card-headers">
-              <input type="radio" class="modal-content-card-select" />
+              <input type="radio" class="modal-content-card-select" name="select-pledge"/>
               <hgroup>
                 <h3>Mahogany Special Edition</h3>
                 <h3 class="subheader">Pledge $200 or more</h3>
