show pledge section

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
             <header class="modal-content-card-headers">
               <input type="radio" class="modal-content-card-select" name="select-pledge"/>
               <hgroup>
-                <h3>Pledge with no reward</h3>
+                <h3 class="primary">Pledge with no reward</h3>
               </hgroup>
             </header>
             <p class="modal-content-card-description">
@@ -182,7 +182,7 @@
             <header class="modal-content-card-headers">
               <input type="radio" class="modal-content-card-select" name="select-pledge"/>
               <hgroup>
-                <h3>Bamboo Stand</h3>
+                <h3 class="primary">Bamboo Stand</h3>
                 <h3 class="subheader">Pledge $25 or more</h3>
               </hgroup>
             </header>
@@ -213,7 +213,7 @@
             <header class="modal-content-card-headers">
               <input type="radio" class="modal-content-card-select" name="select-pledge"/>
               <hgroup>
-                <h3>Black Edition Stand</h3>
+                <h3 class="primary">Black Edition Stand</h3>
                 <h3 class="subheader">Pledge $75 or more</h3>
               </hgroup>
             </header>
@@ -244,7 +244,7 @@
             <header class="modal-content-card-headers">
               <input type="radio" class="modal-content-card-select" name="select-pledge"/>
               <hgroup>
-                <h3>Mahogany Special Edition</h3>
+                <h3 class="primary">Mahogany Special Edition</h3>
                 <h3 class="subheader">Pledge $200 or more</h3>
               </hgroup>
             </header>
