pledge btn event listener

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                     <input type="text" class="pledge-input" value="25" />
                   </div>
                 </form>
-                <button class="pledge-submit">Continue</button>
+                <button class="pledge-submit" id="no-reward-btn">Continue</button>
               </div>
             </div>
           </div>
@@ -202,7 +202,7 @@
                     <input type="text" class="pledge-input" value="25" />
                   </div>
                 </form>
-                <button class="pledge-submit">Continue</button>
+                <button class="pledge-submit" id="bamboo-btn">Continue</button>
               </div>
             </div>
           </div>
@@ -233,7 +233,7 @@
                     <input type="text" class="pledge-input" value="25" />
                   </div>
                 </form>
-                <button class="pledge-submit">Continue</button>
+                <button class="pledge-submit" id="black-edition-btn">Continue</button>
               </div>
             </div>
           </div>
@@ -264,7 +264,7 @@
                     <input type="text" class="pledge-input" value="25" />
                   </div>
                 </form>
-                <button class="pledge-submit">Continue</button>
+                <button class="pledge-submit" id="mahogany-btn">Continue</button>
               </div>
             </div>
           </div>
