responsive about-card-footer

--- a/index.html
+++ b/index.html
@@ -100,8 +100,11 @@
           launch our promotional campaign, and you’ll be added to a special
           Backer member list.
         </p>
+        
+        <footer class="about-section-card-footer">
         <p class="about-section-card-count"><span>101</span> left</p>
         <button class="about-section-card-button" id="bamboo-pledge-btn">Select Reward</button>
+        </footer>
       </section>
       <section class="about-section-card">
         <header class="about-section-card-headers">
@@ -114,8 +117,10 @@
           You get a Black Special Edition computer stand and a personal thank
           you. You’ll be added to our Backer member list. Shipping is included.
         </p>
+        <footer class="about-section-card-footer">
         <p class="about-section-card-count"><span>64</span> left</p>
         <button class="about-section-card-button" id="black-edition-pledge-btn">Select Reward</button>
+        </footer> 
       </section>
       <section class="about-section-card disabled-section">
         <header class="about-section-card-headers">
@@ -130,10 +135,12 @@
           personal thank you. You’ll be added to our Backer member list.
           Shipping is included.
         </p>
+        <footer class="about-section-card-footer">
         <p class="about-section-card-count"><span>0</span> left</p>
         <button class="about-section-card-button disabled-button">
           Out of Stock
         </button>
+        </footer>
       </section>
     </section>
 
