responsive stats section

--- a/index.html
+++ b/index.html
@@ -56,17 +56,19 @@
     </section>
 
     <section class="stats-section">
-      <div class="stat total-backed">
-        <h2>$89,914</h2>
-        <p>of $100,000 backed</p>
-      </div>
-      <div class="stat total-backers">
-        <h2>5,007</h2>
-        <p>total backers</p>
-      </div>
-      <div class="stat days-left">
-        <h2>56</h2>
-        <p>days left</p>
+      <div class="stat-details">
+        <div class="stat total-backed">
+          <h2>$89,914</h2>
+          <p>of $100,000 backed</p>
+        </div>
+        <div class="stat total-backers">
+          <h2>5,007</h2>
+          <p>total backers</p>
+        </div>
+        <div class="stat days-left">
+          <h2>56</h2>
+          <p>days left</p>
+        </div>
       </div>
       <div class="progress">
         <div class="progress-bar"></div>
