--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
         <section class="modal-content-card-container disabled-section">
           <div class="modal-content-card">
             <header class="modal-content-card-headers">
-              <input type="radio" class="modal-content-card-select" name="select-pledge"/>
+              <input type="radio" class="modal-content-card-select" name="select-pledge" id="mahogany-select" disabled/>
               <hgroup>
                 <h3 class="primary">Mahogany Special Edition</h3>
                 <h3 class="subheader">Pledge $200 or more</h3>
