--- a/index.html
+++ b/index.html
@@ -44,13 +44,12 @@
       </p>
       <div class="introduction-section-buttons">
         <button class="back-this-project">Back this project</button
-        ><button class="bookmark-this mobile">
-          <img src="images/icon-bookmark.svg" alt="" />
-        </button>
-        <div class="bookmark-this desktop">
-          <button><img src="images/icon-bookmark.svg" alt="" /></button
-          ><span class="bookmarked">Bookmarked</span
-          ><span class="bookmark">Bookmark</span>
+        >
+        <div class="bookmark-this-container">
+          <button class="bookmark-this">
+            <img src="images/icon-bookmark.svg" alt="" />
+          </button>
+          <span class="bookmark-text">Bookmark</span>
         </div>
       </div>
     </section>
