responsive nav - background overlay

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </ul>
       </nav>
     </header>
-    <div class="background-container"></div>
+    <div class="background-container"><div class="background-overlay"></div></div>
     <section class="introduction-section">
       <div class="introduction-section-product-logo">
         <img src="images/logo-mastercraft.svg" alt="" />
