styled interactive mobile nav

--- a/index.html
+++ b/index.html
@@ -30,6 +30,19 @@
           <li><a href="">Get Started</a></li>
         </ul>
       </nav>
+      <div class="mobile-nav-container">
+        <nav class="mobile-nav">
+          <a href="">
+            <div>About</div>
+          </a>
+          <a href="">
+            <div>Discover</div>
+          </a>
+          <a href="">
+            <div>Get Started</div>
+          </a>
+        </nav>
+      </div>
     </header>
     <div class="background-container"><div class="background-overlay"></div></div>
     <section class="introduction-section">
