--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
   <body>
     <header class="main-header">
       <nav class="main-nav">
-        <a href="#" class="main-nav-company-logo">
+        <a href="./index.html" class="main-nav-company-logo">
           <img src="images/logo.svg" alt="" />
         </a>
-        <button class="main-nav-button">
+        <button class="main-nav-button" title="">
           <img src="images/icon-hamburger.svg" alt="">
         </button>
         <ul class="main-nav-links">
@@ -59,7 +59,7 @@
         <button class="back-this-project">Back this project</button
         >
         <div class="bookmark-this-container">
-          <button class="bookmark-this">
+          <button class="bookmark-this" title="bookmark-this">
             <img src="images/icon-bookmark.svg" alt="" />
           </button>
           <span class="bookmark-text">Bookmark</span>
@@ -162,7 +162,7 @@
       <div class="modal-content">
         <header class="modal-content-header">
           <h2>Back this project</h2>
-          <button class="close-modal">
+          <button class="close-modal" title="close-modal">
             <img src="images/icon-close-modal.svg" alt="" />
           </button>
         </header>
