--- a/index.html
+++ b/index.html
@@ -19,26 +19,26 @@
     <header class="main-header">
       <nav class="main-nav">
         <a href="./index.html" class="main-nav-company-logo">
-          <img src="images/logo.svg" alt="" />
+          <img src="images/logo.svg" alt="Crowdfunding" />
         </a>
         <button class="main-nav-button" title="">
-          <img src="images/icon-hamburger.svg" alt="">
+          <img src="images/icon-hamburger.svg" alt="menu">
         </button>
         <ul class="main-nav-links">
-          <li><a href="">About</a></li>
-          <li><a href="">Discover</a></li>
-          <li><a href="">Get Started</a></li>
+          <li><a href="./index.html">About</a></li>
+          <li><a href="./index.html">Discover</a></li>
+          <li><a href="./index.html">Get Started</a></li>
         </ul>
       </nav>
       <div class="mobile-nav-container">
         <nav class="mobile-nav">
-          <a href="">
+          <a href="./index.html">
             <div>About</div>
           </a>
-          <a href="">
+          <a href="./index.html">
             <div>Discover</div>
           </a>
-          <a href="">
+          <a href="./index.html">
             <div>Get Started</div>
           </a>
         </nav>
@@ -47,7 +47,7 @@
     <div class="background-container"><div class="background-overlay"></div></div>
     <section class="introduction-section">
       <div class="introduction-section-product-logo">
-        <img src="images/logo-mastercraft.svg" alt="" />
+        <img src="images/logo-mastercraft.svg" alt="Mastercraft" />
       </div>
       <h2 class="introduction-section-product-name">
         Mastercraft Bamboo Monitor Riser
