--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
             <div class="modal-content-pledge">
               <p class="modal-content-pledge-header">Enter your pledge</p>
               <div class="pledge-form-container">
-                <form action="" class="pledge-form">
+                <form class="pledge-form">
                   <div class="pledge-input-container">
                     <input type="text" class="pledge-input" id="no-reward-input" value="0" disabled/>
                   </div>
@@ -218,7 +218,7 @@
             <div class="modal-content-pledge">
               <p class="modal-content-pledge-header">Enter your pledge</p>
               <div class="pledge-form-container">
-                <form action="" class="pledge-form">
+                <form class="pledge-form">
                   <div class="pledge-input-container">
                     <input type="text" class="pledge-input" id="bamboo-input" value="25" />
                   </div>
@@ -249,7 +249,7 @@
             <div class="modal-content-pledge">
               <p class="modal-content-pledge-header">Enter your pledge</p>
               <div class="pledge-form-container">
-                <form action="" class="pledge-form">
+                <form class="pledge-form">
                   <div class="pledge-input-container">
                     <input type="text" class="pledge-input" id="black-edition-input" value="75"/>
                   </div>
@@ -280,7 +280,7 @@
             <div class="modal-content-pledge">
               <p class="modal-content-pledge-header">Enter your pledge</p>
               <div class="pledge-form-container">
-                <form action="" class="pledge-form">
+                <form class="pledge-form">
                   <div class="pledge-input-container">
                     <input type="text" class="pledge-input" id="mahogany-input" value="200" />
                   </div>
