--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
         <section class="modal-content-card-container">
           <div class="modal-content-card">
             <header class="modal-content-card-headers">
-              <input type="radio" class="modal-content-card-select" name="select-pledge"/>
+              <input type="radio" class="modal-content-card-select" name="select-pledge" title="select"/>
               <hgroup>
                 <h3 class="primary">Pledge with no reward</h3>
               </hgroup>
@@ -201,7 +201,7 @@
         <section class="modal-content-card-container">
           <div class="modal-content-card">
             <header class="modal-content-card-headers">
-              <input type="radio" class="modal-content-card-select" id="bamboo-select" name="select-pledge"/>
+              <input type="radio" class="modal-content-card-select" id="bamboo-select" name="select-pledge" title="select"/>
               <hgroup>
                 <h3 class="primary">Bamboo Stand</h3>
                 <h3 class="subheader">Pledge $25 or more</h3>
@@ -232,7 +232,7 @@
         <section class="modal-content-card-container">
           <div class="modal-content-card">
             <header class="modal-content-card-headers">
-              <input type="radio" class="modal-content-card-select" id="black-edition-select" name="select-pledge"/>
+              <input type="radio" class="modal-content-card-select" id="black-edition-select" name="select-pledge" title="select"/>
               <hgroup>
                 <h3 class="primary">Black Edition Stand</h3>
                 <h3 class="subheader">Pledge $75 or more</h3>
@@ -263,7 +263,7 @@
         <section class="modal-content-card-container disabled-section">
           <div class="modal-content-card">
             <header class="modal-content-card-headers">
-              <input type="radio" class="modal-content-card-select" name="select-pledge" id="mahogany-select" disabled/>
+              <input type="radio" class="modal-content-card-select" name="select-pledge" id="mahogany-select" title="select" disabled/>
               <hgroup>
                 <h3 class="primary">Mahogany Special Edition</h3>
                 <h3 class="subheader">Pledge $200 or more</h3>
