--- a/index.html
+++ b/index.html
@@ -188,11 +188,11 @@
             <div class="modal-content-pledge">
               <p class="modal-content-pledge-header">Enter your pledge</p>
               <div class="pledge-form-container">
-                <form class="pledge-form">
+                <div class="pledge-form">
                   <div class="pledge-input-container">
-                    <input type="text" class="pledge-input" id="no-reward-input" value="0" disabled/>
+                    <input type="text" class="pledge-input" id="no-reward-input" value="0" title="pledge-input" disabled/>
                   </div>
-                </form>
+                </div>
                 <button class="pledge-submit" id="no-reward-btn">Continue</button>
               </div>
             </div>
@@ -218,11 +218,11 @@
             <div class="modal-content-pledge">
               <p class="modal-content-pledge-header">Enter your pledge</p>
               <div class="pledge-form-container">
-                <form class="pledge-form">
+                <div class="pledge-form">
                   <div class="pledge-input-container">
-                    <input type="text" class="pledge-input" id="bamboo-input" value="25" />
+                    <input type="text" class="pledge-input" id="bamboo-input" value="25" title="pledge-input"/>
                   </div>
-                </form>
+                </div>
                 <button class="pledge-submit" id="bamboo-btn">Continue</button>
               </div>
             </div>
@@ -249,11 +249,11 @@
             <div class="modal-content-pledge">
               <p class="modal-content-pledge-header">Enter your pledge</p>
               <div class="pledge-form-container">
-                <form class="pledge-form">
+                <div class="pledge-form">
                   <div class="pledge-input-container">
-                    <input type="text" class="pledge-input" id="black-edition-input" value="75"/>
+                    <input type="text" class="pledge-input" id="black-edition-input" value="75" title="pledge-input"/>
                   </div>
-                </form>
+                </div>
                 <button class="pledge-submit" id="black-edition-btn">Continue</button>
               </div>
             </div>
@@ -280,11 +280,11 @@
             <div class="modal-content-pledge">
               <p class="modal-content-pledge-header">Enter your pledge</p>
               <div class="pledge-form-container">
-                <form class="pledge-form">
+                <div class="pledge-form">
                   <div class="pledge-input-container">
-                    <input type="text" class="pledge-input" id="mahogany-input" value="200" />
+                    <input type="text" class="pledge-input" id="mahogany-input" value="200" title="pledge-input"/>
                   </div>
-                </form>
+                </div>
                 <button class="pledge-submit" id="mahogany-btn">Continue</button>
               </div>
             </div>
